add fade animation

--- a/css/main.css
+++ b/css/main.css
@@ -137,7 +137,7 @@ body {
 }
 
 .animate-room {
-  animation: animateFill 4s ease-in;
+  animation: animateFill 1s ease-in-out;
 }
 
 @keyframes animateFill {
